fixed the nav icons and spacing btwn buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,15 +15,18 @@
 .inline {
   position: absolute;
   top: 8px;
-  left: 350px;
+  left: 300px;
   /* text-align: center; */
   /* background-color: grey; */
-  padding-top: 50px;
-
+  /* padding-top: 50px; */
+  background-color: gray;
+  border-radius: 5px;
+  padding: 0px;
 }
 #main-img{
   width: 100%;
-  height: 600px;
+  height: 700px;
+  /* padding-top: 30px; */
 }
 .tablink{
   background-color: grey;
@@ -37,18 +40,52 @@
 #bottom-promos li{
   display: inline-block;
   list-style: none;
+
 }
 footer{
   text-align: center;
 }
-#big{
+#big {
   font-size: 70px;
+  font-weight: 1px;
+  line-height: 1px;
 }
 #small{
-  font-size: 30px;
+  font-size: 25px;
 }
 .middle-text p{
   white-space: normal;
+}
+#bottom-promos img{
+  width: 343px;
+  height: 170px;
+  /* margin-right: 1px; */
+}
+#footer{
+  font-size: 11px;
+  color: gray;
+}
+.block {
+  display: inline;
+  /* width: 100%; */
+  border: none;
+  background-color: gray;
+  
+  font-size: 16px;
+  /* cursor: pointer; */
+  /* text-align: center; */
+  /* border-radius: 5px; */
+  margin: 0 0px;
+    /* border-right: 5px; */
+  padding: 8px 30px;
+  color: white;
+}
+div.inline button:not(:last-child){
+  border-right: 2px solid lightgrey ;
+
+}
+#footer a{
+  text-decoration: none;
 }
 
 
